* FIXED: BoundingBox calculation by class table using negative cell_spacing.

* FIXED: Win32: Repainting windows after removing transient windows sometimes
  failed.  Caused by frames not setting WS_CLIPCHILDREN.

* FIXED: Win32: returning absolute path for file('~/xxx') on Windows 95
  and Windows 98 (patched in the SWI-Prolog uxnt.lib library).

* FIXED: PceEmacs Prolog colouring to close the text-buffer input stream.

* FIXED: (Finally) saving the PceEmacs bookmarks on exit

* FIXED: modal transient windows not honoured if there is a focus.

* FIXED: Uninitialised data in dialog layout algorithm that could result
  in totally wrong placement.

* FIXED/MODIFIED: Deleting content from a table object now ->destroy's
  the graphicals if they are not locked.

* FIXED: Added proper message for `unresolved' types.

* ADDED: ignore-case argument to `char_array->prefix' for consistency with
  ->sub and ->prefix.

* ADDED: Syntax colouring in Prolog mode.  Lots of changes to the top  of
  the PceEmacs mode classes to deal with colourisation support.

* FIXED: `char_array->sub: text, @on' (i.e. case-insensitive substring match)

* ADDED: `table_slice->displayed' to temporarily hide/show table rows and
  columns.

* FIXED: Combining stretchability for spanned cells in tables, causing the
  table to grow/shrink as rows/columns are manipulated in the presence of
  spanned cells.

* FIXED: Colour of the underline in class text-image sometimes showing
  up wrong.

* ADDED: Support for wheel-mice.  See `event<-id' for details.  This support
  works if your windows system passes WM_WHEELMOUSE events or you are on a
  Unix/X11 system and the X-server is programmed to emit button-4 and
  button-5 events on rotating the wheel.  See the class-variable
  event.x11_wheel_mouse for details.

* ADDED: X11: added mouse button-4 and button-5 events as well as support
  for wheel-mice.


VERSION 5.0.8
=============

* FIXED: Click-stay up of popup menus that do not fit on the screen.
